tests/snapshots/test_runner__tests__compiler__typecheck__cps_sugar_3__cps_sugar_3.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let lift (x : Int) : { x : Int } = { x, }

entry
  ~lift (
// ^^^^ Error, lift is not a satisfactory bind function
   print (123 !)
  )

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/cps_sugar_3/cps_sugar_3.kk:4:4
  │
4 │     ~lift (
  │ ╭────^
5 │ │ // ^^^^ Error, lift is not a satisfactory bind function
6 │ │    print (123 !)
  │ ╰─────────────^ Cannot call a non-function
  │
  = The type of this expression is not function, so you cannot call it.
